# RLMOptimizer

./: .gitignore  .repo_ignore  AGENTS.md  README.md  example.py  pyproject.toml
examples/minimal_compile/: README.md  apt_example.py
rlmoptimizer/: __init__.py  budgeting.py  debugger.py  evaluator.py  fingerprint.py  interpreter.py  kernel.py  optimizer.py  progress.py  rlm_session.py  root_state.py  tools.py  types.py
tests/: _helpers.py  test_api.py  test_best_tracking.py  test_budget.py  test_budget_llm_calls.py  test_evaluator_resilience.py  test_event_hooks.py  test_example_ids.py  test_instruction_update.py  test_interpreter.py  test_progress.py  test_prompt_update.py  test_rlm_session.py  test_rlm_session_tool_compat.py  test_root_state.py  test_tools.py  test_unified_harness.py  test_verbose_rendering.py
