[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rlmoptimizer"
version = "0.1.0"
description = "Agentic RLM-based prompt optimizer for DSPy modules"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "dspy>=3.1.3",
]

[tool.hatch.build]
skip-excluded-dirs = true

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["rlmoptimizer"]
exclude = [
    "/rlmoptimizer/benchmarks",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "/docs",
    "/rlmoptimizer/benchmarks",
]
